FDS-142: updates to video overlay to make text visible when video isnt playing .. updated z-index on play to ensure that click to pause works

--- a/src/components/molecules/video-overlay/_video-overlay.scss
+++ b/src/components/molecules/video-overlay/_video-overlay.scss
@@ -2,7 +2,8 @@
   display: none;
 
   @include breakpoint(medium) {
-    transition: opacity .25s ease-in-out;
+    background: rgba($black, .25);
+    transition: opacity .25s ease-in-out 0s, z-index 0s ease-in-out 5s;
     opacity: 1;
     display: block;
     position: absolute;
@@ -23,6 +24,7 @@
 
     .playing & {
       opacity: 0;
+      z-index: -1;
     }
   }
 }
